添加美酒库首页数据展示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
         <item>14</item>
         <item>15</item>
     </string-array>
+    <string name="title_activity_shop_index_info">美酒商城</string>
 </resources>
