--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
     <string name="app_name">新朝智能酒柜</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">注册</string>
-
+    <string name="p2refresh_head_load_more">加载更多</string>
+    <string name="p2refresh_end_load_more">更    多</string>
+    <string name="p2refresh_end_click_load_more">点击加载</string>
+    <string name="p2refresh_release_refresh">松开刷新</string>
+    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
+    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
+    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
+    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
     <!-- Strings related to login -->
     <string name="prompt_email">手机号码(请输入手机号)</string>
     <string name="prompt_password">密        码(8到16位数字,字母,字符(至少两种))</string>
@@ -42,4 +49,5 @@
         <item>15</item>
     </string-array>
     <string name="title_activity_shop_index_info">美酒商城</string>
+    <string name="title_activity_shop_info">美酒列表</string>
 </resources>
