关闭技术债务ApiClient中大括号的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     </string-array>
     <string name="title_activity_shop_index_info">美酒商城</string>
     <string name="title_activity_shop_info">美酒列表</string>
+    <string name="title_activity_shop_detail_info">商品详情</string>
 </resources>
