集成支付模块 1，支付宝 2，微信

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="title_activity_shop_detail_info">商品详情</string>
     <string name="title_activity_party_list_info">品酒活动</string>
     <string name="title_activity_party_detail_info">活动详情</string>
+    <string name="title_activity_party_signup_info">活动报名</string>
 </resources>
