将图片加载器Imageloader 调整为FaceBook fresco框架

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="title_activity_shop_reviews_info">商品点评</string>
     <string name="title_activity_shop_createorder_info">确认订单</string>
     <string name="title_activity_user_feedback_info">意见反馈</string>
+    <string name="title_activity_user_userinfo_info">个人信息</string>
 </resources>
