--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="title_activity_shop_createorder_info">确认订单</string>
     <string name="title_activity_user_feedback_info">意见反馈</string>
     <string name="title_activity_user_userinfo_info">个人信息</string>
+    <string name="title_activity_user_address_list_info">地址管理</string>
 </resources>
